--- a/style.css
+++ b/style.css
@@ -1090,4 +1090,189 @@ footer #copy {
   color: #252525;
   font-size: 8px;
 }
+
+section {
+  width: 1280px;
+  height: 100%;
+  margin: 100px auto;
+}
+
+@media screen and (max-width: 1024px) {
+  section {
+    width: 100%;
+  }
+}
+
+section .boxing {
+  width: 100%;
+  margin: 0 auto;
+}
+
+section .boxing .box_magic {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60% 40%;
+      grid-template-columns: 60% 40%;
+  grid-gap: 80px;
+  margin-bottom: 100px;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing .box_magic {
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+    display: block;
+  }
+}
+
+section .boxing .image_box {
+  margin: 0 auto;
+  padding: 0;
+  display: block;
+  width: 100%;
+}
+
+section .boxing img {
+  width: 450px;
+  height: 600px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 100px;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing img {
+    margin: 0 290px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  section .boxing img {
+    margin: 0 160px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  section .boxing img {
+    margin: 0 auto;
+  }
+}
+
+section .boxing .text_box {
+  margin: 0;
+  padding-right: 30%;
+  display: block;
+  width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing .text_box {
+    margin: 0 auto;
+  }
+}
+
+section .boxing h4 {
+  text-align: center;
+  padding: 20px 10px 10px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing h4 {
+    font-size: 40px;
+  }
+}
+
+section .boxing p {
+  font-size: 20px;
+  padding: 10px 0;
+  line-height: 2.5;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing p {
+    width: 100%;
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  section .boxing p {
+    font-size: 24px;
+    line-height: 2;
+  }
+}
+
+section .boxing .box_magic:nth-child(odd) {
+      grid-template-areas: "pic text";
+  -ms-grid-columns: 60% 40%;
+      grid-template-columns: 60% 40%;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing .box_magic:nth-child(odd) {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+}
+
+section .boxing .box_magic:nth-child(odd) .image_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: pic;
+}
+
+section .boxing .box_magic:nth-child(odd) .text_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text;
+  padding: 0 100px;
+}
+
+@media screen and (max-width: 767px) {
+  section .boxing .box_magic:nth-child(odd) .text_box {
+    padding: 0 30px;
+  }
+}
+
+section .boxing .box_magic:nth-child(even) {
+      grid-template-areas: "text pic";
+  -ms-grid-columns: 40% 60%;
+      grid-template-columns: 40% 60%;
+  margin-left: 15%;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing .box_magic:nth-child(even) {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+}
+
+section .boxing .box_magic:nth-child(even) .image_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: pic;
+}
+
+section .boxing .box_magic:nth-child(even) .text_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text;
+}
+
+@media screen and (max-width: 1024px) {
+  section .boxing .box_magic:nth-child(even) .text_box {
+    padding: 0 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  section .boxing .box_magic:nth-child(even) .text_box {
+    padding: 0 30px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
