--- a/style.css
+++ b/style.css
@@ -1041,4 +1041,63 @@ section .boxing .box_magic:nth-child(even) .text_box {
   section .boxing .box_magic:nth-child(even) .text_box {
     padding: 0 30px;
   }
+}
+
+#list {
+  padding: 100px 0 0;
+}
+
+form {
+  width: 1280px;
+  margin: 0 auto;
+  padding: 20px 0 100px;
+}
+@media screen and (max-width: 1024px) {
+  form {
+    width: 100%;
+    padding: 20px 20px 100px;
+  }
+}
+form input {
+  width: 47%;
+  padding: 10px;
+}
+@media screen and (max-width: 1024px) {
+  form input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+form input::-moz-placeholder {
+  color: #999;
+  font-size: 14px;
+}
+form input:-ms-input-placeholder {
+  color: #999;
+  font-size: 14px;
+}
+form input::placeholder {
+  color: #999;
+  font-size: 14px;
+}
+form input[type=email] {
+  float: right;
+}
+form textarea {
+  width: 100%;
+  height: 300px;
+  margin: 30px 0;
+  padding: 10px;
+}
+form textarea::-moz-placeholder {
+  color: #999;
+  font-size: 14px;
+}
+form textarea:-ms-input-placeholder {
+  color: #999;
+  font-size: 14px;
+}
+form textarea::placeholder {
+  color: #999;
+  font-size: 14px;
 }/*# sourceMappingURL=style.css.map */
