--- a/style.scss
+++ b/style.scss
@@ -884,3 +884,54 @@ section {
         }
     }
 }
+
+// 聯絡我們
+#list {
+    padding: 100px 0 0;
+}
+
+form {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 20px 0 100px;
+
+    @media screen and (max-width: $tablet) {
+        width: 100%;
+        padding: 20px 20px 100px;
+    }
+
+    input {
+        width: 47%;
+        padding: 10px;
+
+        @media screen and (max-width: $tablet) {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        &::placeholder {
+            color: $color-gray;
+            font-size: 14px;
+        }
+    }
+
+    input[type=email] {
+        float: right;
+        
+
+        
+       
+    }
+
+    textarea {
+        width: 100%;
+        height: 300px;
+        margin: 30px 0;
+        padding: 10px;
+
+        &::placeholder {
+            color: $color-gray;
+            font-size: 14px;
+        }
+    }
+}
