--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap");
 
 $color-gray: #999;
 $color-white: #e9e9e9;
@@ -6,13 +6,13 @@ $color-black: #252525;
 $color-little_white: rgba(236, 236, 236, 0.9);
 $text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.9);
 $gray-shadow: 2px 2px 3px rgba(90, 90, 90, 0.9);
-$box-shadow: 0 5px 10px rgba(0 ,0 ,0, 0.6);
-$fashion-shadow: 2px 10px 14px rgba(0 ,0 ,0, 0.5);
+$box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+$fashion-shadow: 2px 10px 14px rgba(0, 0, 0, 0.5);
 $border: 2px 2px solid black;
 $filter: blur(5px);
-$tablet: 1024px;                                //平板尺寸 (ipad pro)
-$tablets: 960px;                                //平板尺寸 (ipad)
-$mobile: 767px;                                 //手機尺寸
+$tablet: 1024px; //平板尺寸 (ipad pro)
+$tablets: 960px; //平板尺寸 (ipad)
+$mobile: 767px; //手機尺寸
 
 * {
     margin: 0;
@@ -57,8 +57,8 @@ body {
         right: 80px;
         top: 0px;
         // 滑入後 顯示 裡面的 子分頁元素
-        &:hover .mini-link{
-            // display: block; 
+        &:hover .mini-link {
+            // display: block;
             transform: scale(1);
         }
 
@@ -78,7 +78,7 @@ body {
                 font-weight: 900;
                 transition: 0.5s !important;
                 font-size: 22px !important;
-                font-family: 'Coda Caption', sans-serif;
+                font-family: "Coda Caption", sans-serif;
                 letter-spacing: 3px;
             }
 
@@ -121,8 +121,8 @@ nav {
         padding: 20px 50px;
         // height: 300px;
         // 滑入後 顯示 裡面的 子分頁元素
-        &:hover .sub-mini-link{
-            // display: block; 
+        &:hover .sub-mini-link {
+            // display: block;
             transform: scale(1);
         }
     }
@@ -148,8 +148,8 @@ nav {
         // height: 300px;
 
         // 滑入後 顯示 裡面的 子分頁元素
-        &:hover .sub-link{
-            // display: block; 
+        &:hover .sub-link {
+            // display: block;
             transform: scale(1);
         }
     }
@@ -164,7 +164,6 @@ nav {
         top: 56px;
         left: -50px;
         background: $color-little_white;
-        
 
         a {
             display: block !important;
@@ -174,7 +173,6 @@ nav {
     }
 
     #link {
-
         padding-top: 15px;
 
         @media screen and (max-width: $tablet) {
@@ -202,7 +200,6 @@ nav {
     }
 
     #social {
-
         @media screen and (max-width: $tablet) {
             display: none;
         }
@@ -220,7 +217,6 @@ nav {
                 &:hover {
                     filter: invert(92%) sepia(63%) saturate(7384%) hue-rotate(291deg) brightness(103%) contrast(103%);
                 }
-    
             }
         }
     }
@@ -238,7 +234,7 @@ nav {
     font-weight: 900;
     transition: 0.5s !important;
     font-size: 26px !important;
-    font-family: 'Coda Caption', sans-serif;
+    font-family: "Coda Caption", sans-serif;
     float: left;
     letter-spacing: 3px;
     color: $color-black;
@@ -252,7 +248,6 @@ nav {
     @media screen and (max-width: $tablet) {
         display: none !important;
     }
-
 
     &:hover {
         transform: scale(1.15) !important;
@@ -304,31 +299,30 @@ nav {
                 background-size: cover;
             }
 
-            @for $i from 1 through 3{
-                .banner#{$i}::before{    
-                    content:'';
-                    position:absolute;
-                    top:0;
-                    left:0;
-                    height:100vh;
+            @for $i from 1 through 3 {
+                .banner#{$i}::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100vh;
                     background-image: url(./img/banner#{$i}.jpg);
-                    filter:blur(5px);
+                    filter: blur(5px);
                     z-index: 5;
-                    background-size:cover;
+                    background-size: cover;
                 }
             }
 
             &:focus {
                 outline: none;
             }
-    
+
             h2 {
                 padding: 300px 0 100px;
                 font-size: 60px;
                 font-weight: bold;
                 text-shadow: $gray-shadow;
                 color: $color-black;
-                   
 
                 @media screen and (max-width: $tablet) {
                     padding: 600px 0 50px;
@@ -343,7 +337,7 @@ nav {
                     font-size: 36px;
                 }
             }
-    
+
             h3 {
                 font-size: 24px;
                 line-height: 1.5;
@@ -356,7 +350,7 @@ nav {
                     line-height: 1.5;
                     font-size: 30px;
                 }
-                
+
                 @media screen and (max-width: $tablets) {
                     width: 80%;
                     margin: 0 auto;
@@ -370,7 +364,6 @@ nav {
                     margin: 0 auto;
                     line-height: 1.5;
                 }
-
             }
         }
     }
@@ -379,9 +372,8 @@ nav {
         background-position: -100px -50px;
 
         @media screen and (max-width: $tablet) {
-        background-position: center;
+            background-position: center;
         }
-
     }
 
     .banner2 {
@@ -389,8 +381,7 @@ nav {
 
         @media screen and (max-width: $tablet) {
             background-position: center;
-            }
-    
+        }
     }
 
     .banner3 {
@@ -398,8 +389,7 @@ nav {
 
         @media screen and (max-width: $tablet) {
             background-position: center;
-            }
-    
+        }
     }
 }
 
@@ -411,7 +401,6 @@ nav {
     margin: 0 auto;
     width: calc(100% - 100px - 100px);
     margin-top: 150px;
-    
 
     .big_box {
         position: relative;
@@ -448,7 +437,7 @@ nav {
                 padding: 20px;
                 font-weight: 900;
             }
-            
+
             @media screen and (max-width: $mobile) {
                 padding: 5px;
             }
@@ -491,7 +480,7 @@ nav {
         margin-top: 80px 0;
         // 溢出：隱藏
         // overflow: hidden;
-    
+
         @media screen and (max-width: $tablet) {
             width: 100%;
         }
@@ -503,7 +492,7 @@ nav {
         &:focus {
             outline: none;
         }
-    
+
         img {
             width: 250px;
             height: 375px;
@@ -521,13 +510,12 @@ nav {
                 width: 200px;
                 height: 320px;
             }
-    
+
             &:hover {
                 border-radius: 1px;
             }
-            
         }
-    
+
         h3 {
             text-align: center;
             margin-top: 10px;
@@ -540,7 +528,6 @@ nav {
             @media screen and (max-width: $mobile) {
                 margin-top: 20px;
             }
-            
         }
     }
 }
@@ -580,15 +567,13 @@ nav {
                 opacity: 1;
                 transition: 1s;
 
-
                 &:hover {
                     opacity: 0;
                 }
-
             }
         }
 
-        img  {
+        img {
             width: 100%;
             height: 300px;
             object-fit: cover;
@@ -611,14 +596,13 @@ nav {
 #work {
     width: 1280px;
     margin: 0 auto;
-    
+
     // 溢出：隱藏
     overflow: hidden;
 
     @media screen and (max-width: $tablet) {
         width: 100%;
     }
-
 
     &:focus {
         outline: none;
@@ -640,14 +624,12 @@ nav {
         &:hover {
             border-radius: 20px;
         }
-
     }
 
     h3 {
         text-align: center;
         margin-top: 30px;
         color: $color-black;
-        
     }
 }
 
@@ -681,12 +663,8 @@ form {
         }
     }
 
-    input[type=email] {
+    input[type="email"] {
         float: right;
-        
-
-        
-       
     }
 
     textarea {
@@ -735,7 +713,6 @@ footer {
         color: $color-black;
         font-size: 8px;
     }
-    
 }
 
 // 區塊內容介紹
@@ -751,7 +728,6 @@ section {
     .boxing {
         width: 100%;
         margin: 0 auto;
-        
 
         .box_magic {
             display: grid;
@@ -764,22 +740,20 @@ section {
                 display: block;
             }
         }
-    
+
         .image_box {
             margin: 0 auto;
             padding: 0;
             display: block;
             width: 100%;
-
-            
         }
-        
+
         img {
             width: 450px;
             height: 450px;
             object-fit: cover;
             margin: 0 100px;
-            
+
             @media screen and (max-width: $tablet) {
                 margin: 0 290px;
             }
@@ -802,7 +776,6 @@ section {
             @media screen and (max-width: $tablet) {
                 margin: 0 auto;
             }
-            
         }
 
         h4 {
@@ -813,11 +786,10 @@ section {
 
             @media screen and (max-width: $tablet) {
                 font-size: 40px;
-                
             }
         }
 
-        p{
+        p {
             font-size: 20px;
             padding: 10px 0;
             line-height: 2.5;
@@ -832,7 +804,6 @@ section {
                 line-height: 2;
             }
         }
-
 
         .box_magic:nth-child(odd) {
             grid-template-areas: "pic text";
@@ -863,7 +834,6 @@ section {
             @media screen and (max-width: $tablet) {
                 grid-template-columns: 1fr;
                 margin: 0 auto;
-
             }
         }
 
@@ -873,7 +843,7 @@ section {
 
         .box_magic:nth-child(even) .text_box {
             grid-area: text;
-            
+
             @media screen and (max-width: $tablet) {
                 padding: 0 100px;
             }
@@ -886,52 +856,77 @@ section {
 }
 
 // 聯絡我們
-#list {
-    padding: 100px 0 0;
+#contactme {
+    height: 40vh;
+
+    .title-big {
+        margin: 20px;
+        text-align: center;
+    }
 }
 
-form {
-    width: 1280px;
-    margin: 0 auto;
-    padding: 20px 0 100px;
+.box_info {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-gap: 20px;
 
-    @media screen and (max-width: $tablet) {
-        width: 100%;
-        padding: 20px 20px 100px;
+    .contact_box_text {
+        height: 100%;
+        padding-top: 20px;
+
+        .studio article {
+            margin-top: 100px;
+        }
     }
 
-    input {
-        width: 47%;
-        padding: 10px;
+    form {
+        width: 700px;
+        margin: 0 auto;
+        padding: 20px 0 100px;
+        float: right;
 
         @media screen and (max-width: $tablet) {
             width: 100%;
-            margin-bottom: 20px;
+            padding: 20px 20px 100px;
         }
 
-        &::placeholder {
-            color: $color-gray;
-            font-size: 14px;
+        input {
+            width: 100%;
+            padding: 3px;
+            margin-bottom: 5px;
+
+            @media screen and (max-width: $tablet) {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            &::placeholder {
+                color: $color-gray;
+                font-size: 14px;
+            }
         }
-    }
 
-    input[type=email] {
-        float: right;
-        
+        input[type="email"] {
+            float: left;
+        }
 
-        
-       
-    }
+        textarea {
+            width: 100%;
+            height: 100px;
+            margin: 5px 0;
+            padding: 10px;
 
-    textarea {
-        width: 100%;
-        height: 300px;
-        margin: 30px 0;
-        padding: 10px;
+            &::placeholder {
+                color: $color-gray;
+                font-size: 14px;
+            }
+        }
 
-        &::placeholder {
-            color: $color-gray;
-            font-size: 14px;
+        .btn {
+            border: 1px solid #252525;
+            color: #212529;
+            text-align: center;
+            vertical-align: middle;
         }
     }
 }
