--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ nav #link a {
   vertical-align: 25px;
 }
 nav #link a:hover {
-  color: #999;
+  color: pink;
   transform: scale(1.05);
 }
 nav #social {
@@ -1059,9 +1059,11 @@ section .boxing .box_magic:nth-child(even) .text_box {
 .box_info .contact_box_text {
   height: 100%;
   padding-top: 20px;
+  line-height: 2.1;
 }
 .box_info .contact_box_text .studio article {
   margin-top: 100px;
+  display: block;
 }
 .box_info form {
   width: 700px;
