--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,7 @@ nav {
 
     #link {
         padding-top: 15px;
+        text-align: right;
 
         @media screen and (max-width: $tablet) {
             display: none;
@@ -212,7 +213,7 @@ nav {
 
             img {
                 width: 20px;
-                vertical-align: -25px; //上下對齊
+                vertical-align: -20px; //上下對齊
 
                 &:hover {
                     filter: invert(92%) sepia(63%) saturate(7384%) hue-rotate(291deg) brightness(103%) contrast(103%);
@@ -224,6 +225,7 @@ nav {
 
 .logo_pic {
     float: left;
+    padding: 5px;
 
     &:hover {
         filter: invert(92%) sepia(63%) saturate(7384%) hue-rotate(291deg) brightness(103%) contrast(103%);
@@ -872,7 +874,7 @@ section {
 
     .contact_box_text {
         height: 100%;
-        padding-top: 20px;
+        padding: 20px 0 0 150px;
         line-height: 2.1;
 
         .studio article {
@@ -929,6 +931,8 @@ section {
             color: #212529;
             text-align: center;
             vertical-align: middle;
+            width: 10%;
+            float: right;
         }
     }
 }
