--- a/style.scss
+++ b/style.scss
@@ -817,10 +817,10 @@ footer {
 }
 
 // 關於我們
-.about {
+.aboutmes {
     width: 1280px;
     height: 100%;
-    margin: 10px auto;
+    margin: 150px auto;
 }
 .title {
     margin-top: 180px;
