--- a/style.css
+++ b/style.css
@@ -933,49 +933,6 @@ nav #social a img:hover {
   padding: 20px 20px 30px;
 }
 
-#work {
-  width: 1280px;
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 1024px) {
-  #work {
-    width: 100%;
-  }
-}
-
-#work:focus {
-  outline: none;
-}
-
-#work img {
-  width: 250px;
-  height: 250px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  /* border-radius: 50%; 寬高要相同(圓形) */
-  border-radius: 50%;
-  display: block;
-  /* 顯示模式：區塊 */
-  margin: 0 auto;
-  /* 區塊元素 block 才能margin:0 auto; */
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-box-shadow: 2px 10px 14px rgba(0, 0, 0, 0.5);
-          box-shadow: 2px 10px 14px rgba(0, 0, 0, 0.5);
-}
-
-#work img:hover {
-  border-radius: 20px;
-}
-
-#work h3 {
-  text-align: center;
-  margin-top: 30px;
-  color: #252525;
-}
-
 #list {
   padding: 100px 0 0;
 }
@@ -1093,24 +1050,24 @@ footer #copy {
   font-size: 8px;
 }
 
-section {
+#introduce {
   width: 1280px;
   height: 100%;
   margin: 100px auto;
 }
 
 @media screen and (max-width: 1024px) {
-  section {
+  #introduce {
     width: 100%;
   }
 }
 
-section .boxing {
+#introduce .boxing {
   width: 100%;
   margin: 0 auto;
 }
 
-section .boxing .box_magic {
+#introduce .boxing .box_magic {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 60% 40%;
@@ -1120,21 +1077,21 @@ section .boxing .box_magic {
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing .box_magic {
+  #introduce .boxing .box_magic {
     -ms-grid-columns: none;
         grid-template-columns: none;
     display: block;
   }
 }
 
-section .boxing .image_box {
+#introduce .boxing .image_box {
   margin: 0 auto;
   padding: 0;
   display: block;
   width: 100%;
 }
 
-section .boxing img {
+#introduce .boxing img {
   width: 450px;
   height: 450px;
   -o-object-fit: cover;
@@ -1143,24 +1100,24 @@ section .boxing img {
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing img {
+  #introduce .boxing img {
     margin: 0 290px;
   }
 }
 
 @media screen and (max-width: 960px) {
-  section .boxing img {
+  #introduce .boxing img {
     margin: 0 160px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  section .boxing img {
+  #introduce .boxing img {
     margin: 0 auto;
   }
 }
 
-section .boxing .text_box {
+#introduce .boxing .text_box {
   margin: 0;
   padding: 210px 60px 0;
   display: block;
@@ -1168,12 +1125,12 @@ section .boxing .text_box {
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing .text_box {
+  #introduce .boxing .text_box {
     margin: 0 auto;
   }
 }
 
-section .boxing h4 {
+#introduce .boxing h4 {
   text-align: center;
   padding: 20px 10px 10px;
   font-size: 32px;
@@ -1181,52 +1138,52 @@ section .boxing h4 {
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing h4 {
+  #introduce .boxing h4 {
     font-size: 40px;
   }
 }
 
-section .boxing p {
+#introduce .boxing p {
   font-size: 20px;
   padding: 10px 0;
   line-height: 2.5;
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing p {
+  #introduce .boxing p {
     width: 100%;
     font-size: 30px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  section .boxing p {
+  #introduce .boxing p {
     font-size: 24px;
     line-height: 2;
   }
 }
 
-section .boxing .box_magic:nth-child(odd) {
+#introduce .boxing .box_magic:nth-child(odd) {
       grid-template-areas: "pic text";
   -ms-grid-columns: 50% 50%;
       grid-template-columns: 50% 50%;
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing .box_magic:nth-child(odd) {
+  #introduce .boxing .box_magic:nth-child(odd) {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     margin: 0 auto;
   }
 }
 
-section .boxing .box_magic:nth-child(odd) .image_box {
+#introduce .boxing .box_magic:nth-child(odd) .image_box {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: pic;
 }
 
-section .boxing .box_magic:nth-child(odd) .text_box {
+#introduce .boxing .box_magic:nth-child(odd) .text_box {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: text;
@@ -1234,12 +1191,12 @@ section .boxing .box_magic:nth-child(odd) .text_box {
 }
 
 @media screen and (max-width: 767px) {
-  section .boxing .box_magic:nth-child(odd) .text_box {
+  #introduce .boxing .box_magic:nth-child(odd) .text_box {
     padding: 0 30px;
   }
 }
 
-section .boxing .box_magic:nth-child(even) {
+#introduce .boxing .box_magic:nth-child(even) {
       grid-template-areas: "text pic";
   -ms-grid-columns: 40% 60%;
       grid-template-columns: 40% 60%;
@@ -1247,149 +1204,219 @@ section .boxing .box_magic:nth-child(even) {
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing .box_magic:nth-child(even) {
+  #introduce .boxing .box_magic:nth-child(even) {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     margin: 0 auto;
   }
 }
 
-section .boxing .box_magic:nth-child(even) .image_box {
+#introduce .boxing .box_magic:nth-child(even) .image_box {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: pic;
 }
 
-section .boxing .box_magic:nth-child(even) .text_box {
+#introduce .boxing .box_magic:nth-child(even) .text_box {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: text;
 }
 
 @media screen and (max-width: 1024px) {
-  section .boxing .box_magic:nth-child(even) .text_box {
+  #introduce .boxing .box_magic:nth-child(even) .text_box {
     padding: 0 100px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  section .boxing .box_magic:nth-child(even) .text_box {
+  #introduce .boxing .box_magic:nth-child(even) .text_box {
     padding: 0 30px;
   }
 }
 
-#contactme {
-  height: 50vh;
-}
-
-#contactme .title-big {
-  margin: 20px;
-  text-align: center;
-}
-
-.box_info {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 40% 60%;
-      grid-template-columns: 40% 60%;
-  grid-gap: 20px;
-}
-
-.box_info .contact_box_text {
+#aboutmes {
+  width: 1280px;
   height: 100%;
-  padding: 20px 0 0 150px;
-  line-height: 2.1;
+  margin: 150px auto;
 }
 
-.box_info .contact_box_text .studio article {
-  margin-top: 100px;
+#aboutmes .title {
+  margin: 180px 0 40px;
+  text-align: center;
   display: block;
 }
 
-.box_info form {
-  width: 700px;
+#aboutmes .boxing {
+  width: 100%;
   margin: 0 auto;
-  padding: 20px 0 100px;
-  float: right;
+}
+
+#aboutmes .boxing .box_magic {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60% 40%;
+      grid-template-columns: 60% 40%;
+  grid-gap: 15px;
+  margin-bottom: 100px;
 }
 
 @media screen and (max-width: 1024px) {
-  .box_info form {
-    width: 100%;
-    padding: 20px 20px 100px;
+  #aboutmes .boxing .box_magic {
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+    display: block;
   }
 }
 
-.box_info form input {
+#aboutmes .boxing .image_box {
+  margin: 0 auto;
+  padding: 0;
+  display: block;
   width: 100%;
-  padding: 3px;
-  margin-bottom: 5px;
+}
+
+#aboutmes .boxing img {
+  width: 450px;
+  height: 450px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 100px;
 }
 
 @media screen and (max-width: 1024px) {
-  .box_info form input {
-    width: 100%;
-    margin-bottom: 20px;
+  #aboutmes .boxing img {
+    margin: 0 290px;
   }
 }
 
-.box_info form input::-webkit-input-placeholder {
-  color: #999;
-  font-size: 14px;
+@media screen and (max-width: 960px) {
+  #aboutmes .boxing img {
+    margin: 0 160px;
+  }
 }
 
-.box_info form input:-ms-input-placeholder {
-  color: #999;
-  font-size: 14px;
+@media screen and (max-width: 767px) {
+  #aboutmes .boxing img {
+    margin: 0 auto;
+  }
 }
 
-.box_info form input::-ms-input-placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.box_info form input::placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.box_info form input[type="email"] {
-  float: left;
-}
-
-.box_info form textarea {
+#aboutmes .boxing .text_box {
+  margin: 0;
+  padding: 210px 60px 0;
+  display: block;
   width: 100%;
-  height: 100px;
-  margin: 5px 0;
-  padding: 10px;
 }
 
-.box_info form textarea::-webkit-input-placeholder {
-  color: #999;
-  font-size: 14px;
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing .text_box {
+    margin: 0 auto;
+  }
 }
 
-.box_info form textarea:-ms-input-placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.box_info form textarea::-ms-input-placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.box_info form textarea::placeholder {
-  color: #999;
-  font-size: 14px;
-}
-
-.box_info form .btn {
-  border: 1px solid #252525;
-  color: #212529;
+#aboutmes .boxing h4 {
   text-align: center;
-  vertical-align: middle;
-  width: 10%;
-  float: right;
+  padding: 20px 10px 10px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing h4 {
+    font-size: 40px;
+  }
+}
+
+#aboutmes .boxing p {
+  font-size: 20px;
+  padding: 10px 0;
+  line-height: 2.5;
+}
+
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing p {
+    width: 100%;
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #aboutmes .boxing p {
+    font-size: 24px;
+    line-height: 2;
+  }
+}
+
+#aboutmes .boxing .box_magic:nth-child(odd) {
+      grid-template-areas: "pic text";
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing .box_magic:nth-child(odd) {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+}
+
+#aboutmes .boxing .box_magic:nth-child(odd) .image_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: pic;
+}
+
+#aboutmes .boxing .box_magic:nth-child(odd) .text_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text;
+  padding: 220px 100px 0;
+}
+
+@media screen and (max-width: 767px) {
+  #aboutmes .boxing .box_magic:nth-child(odd) .text_box {
+    padding: 0 30px;
+  }
+}
+
+#aboutmes .boxing .box_magic:nth-child(even) {
+      grid-template-areas: "text pic";
+  -ms-grid-columns: 40% 60%;
+      grid-template-columns: 40% 60%;
+  margin-left: 15%;
+}
+
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing .box_magic:nth-child(even) {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+}
+
+#aboutmes .boxing .box_magic:nth-child(even) .image_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: pic;
+}
+
+#aboutmes .boxing .box_magic:nth-child(even) .text_box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text;
+}
+
+@media screen and (max-width: 1024px) {
+  #aboutmes .boxing .box_magic:nth-child(even) .text_box {
+    padding: 0 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #aboutmes .boxing .box_magic:nth-child(even) .text_box {
+    padding: 0 30px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
