--- a/style.scss
+++ b/style.scss
@@ -969,7 +969,8 @@ footer {
 
             input {
                 width: 100%;
-                padding: 10px;
+                padding: 3px;
+                margin-bottom: 10px;
 
                 @media screen and (max-width: $tablet) {
                     width: 100%;
@@ -988,14 +989,20 @@ footer {
 
             textarea {
                 width: 100%;
-                height: 300px;
-                margin: 30px 0;
+                height: 80px;
+                margin: 0;
                 padding: 10px;
 
                 &::placeholder {
                     color: $color-gray;
                     font-size: 14px;
                 }
+            }
+
+            .btn {
+                border: 1px solid black;
+                width: 10%;
+                float: right;
             }
         }
     }
@@ -1197,6 +1204,8 @@ footer {
 
                     img {
                         width: 330px;
+                        height: 220px;
+                        object-fit: cover;
                     }
                 }
             }
